# themes

./: .gitignore  .readthedocs.yaml  README.md
docs/: conf.py  creating.md  index.md  preview.md  requirements.txt  terminal.md  themes.md
palette/: 0x96f.rc  12-bit Rainbow.rc  3024 Day.rc  3024 Night.rc  Aardvark Blue.rc  Abernathy.rc  Adventure Time.rc  Adventure.rc  Adwaita Dark.rc  Adwaita.rc  Afterglow.rc  Aizen Dark.rc  Aizen Light.rc  Alabaster.rc  Alien Blood.rc  Andromeda.rc  Apple Classic.rc  Apple System Colors Light.rc  Apple System Colors.rc  Arcoiris.rc  Ardoise.rc  Argonaut.rc  Arthur.rc  Atelier Sulphurpool.rc  Atom One Dark.rc  Atom One Light.rc  Atom.rc  Aura.rc  Aurora.rc  Ayu Light.rc  Ayu Mirage.rc  Ayu.rc  Banana Blueberry.rc  Batman.rc  Belafonte Day.rc  Belafonte Night.rc  Birds Of Paradise.rc  Black Metal (Bathory).rc  Black Metal (Burzum).rc  Black Metal (Dark Funeral).rc  (+423 more)
pygments/: pyproject.toml
pygments/neomutt_lexer/: __init__.py  lexer.py
truecolor/: 0x96f.rc  12-bit Rainbow.rc  3024 Day.rc  3024 Night.rc  Aardvark Blue.rc  Abernathy.rc  Adventure Time.rc  Adventure.rc  Adwaita Dark.rc  Adwaita.rc  Afterglow.rc  Aizen Dark.rc  Aizen Light.rc  Alabaster.rc  Alien Blood.rc  Andromeda.rc  Apple Classic.rc  Apple System Colors Light.rc  Apple System Colors.rc  Arcoiris.rc  Ardoise.rc  Argonaut.rc  Arthur.rc  Atelier Sulphurpool.rc  Atom One Dark.rc  Atom One Light.rc  Atom.rc  Aura.rc  Aurora.rc  Ayu Light.rc  Ayu Mirage.rc  Ayu.rc  Banana Blueberry.rc  Batman.rc  Belafonte Day.rc  Belafonte Night.rc  Birds Of Paradise.rc  (+426 more)
(+9 files in other folders)
