[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-neomutt"
version = "1.0.0"
description = "Pygments lexer for NeoMutt configuration files"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.9"
dependencies = ["pygments>=2.0"]

[project.entry-points."pygments.lexers"]
neomutt = "neomutt_lexer:NeoMuttLexer"

[tool.setuptools.packages.find]
include = ["neomutt_lexer*"]
